Add usecases, repositories layer, aggregate hanlders, crutch DownloadImages
