# docs/swagger.json
@@ -5,6 +5,36 @@
     },
     "paths": {
         "/v1/images/": {
+            "get": {
+                "description": "Download an image file (JPEG/PNG).",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "text/plain"
+                ],
+                "summary": "Download an image",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Offset of images to fetch",
+                        "name": "offset",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Upload an image file (JPEG/PNG).",
                 "consumes": [
